
CHANGES IN VERSION 2.2.5 [2019-5-19]
-----------------------------------

BUG FIXES

    o RNG-based methods now work without setting a seed
    o Fix iteration over 'r' in 'spatialKMeans()'

CHANGES IN VERSION 2.2.4 [2019-5-8]
-----------------------------------

BUG FIXES

    o Fix large external array offsets in 'writeImzML'

CHANGES IN VERSION 2.2.3 [2019-5-8]
-----------------------------------

BUG FIXES

    o Cleaned up some 'writeImzML' mapping validity issues

CHANGES IN VERSION 2.2.2 [2019-5-7]
-----------------------------------

BUG FIXES

    o Removed curly braces around UUID when writing imzML

CHANGES IN VERSION 2.2.1 [2019-5-6]
-----------------------------------

BUG FIXES

    o Fixed bug in plotting results where 'column' argument
        would get matched before the 'col' argument

CHANGES IN VERSION 2.1.30 [2019-4-30]
-----------------------------------

BUG FIXES

    o Fixed bug where 'spatialShrunkenCentroids' classification
        would change the user 'options(Cardinal.progress)'

CHANGES IN VERSION 2.1.29 [2019-4-29]
-----------------------------------

BUG FIXES

    o Coercing to 'SpatialShrunkenCentroids2' now drops
        empty classes for segmentations (as expected)

CHANGES IN VERSION 2.1.28 [2019-4-28]
-----------------------------------

BUG FIXES

    o Fixed 'topFeatures' method for 'SpatialShrunkenCentroids2'
        where 'statistic' was actually printing the 'centers'
    o The 'collect' method for 'MSProcessedImagingExperiment'
        now preserves sparseness when pulling into memory

CHANGES IN VERSION 2.1.27 [2019-4-26]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Added 'mzFilter' as an alias for 'peakFilter' with more
        suitable defaults for non-peak-picked spectra

BUG FIXES

    o Minor fixes to 'print' method for plots and images
    o Minor fixes to margin padding for 'colorkey' in images

CHANGES IN VERSION 2.1.26 [2019-4-25]
-----------------------------------

BUG FIXES
