@@ -6,6 +6,7 @@ BUG FIXES
 
     o RNG-based methods now work without setting a seed
     o Fix iteration over 'r' in 'spatialKMeans()'
+    o Fix 'centers' calculation in 'spatialKMeans()'
 
 CHANGES IN VERSION 2.2.4 [2019-5-8]
 -----------------------------------
